data/derived/fa15/progs/unify/prog1169.ml.out
Characters 16-19:
  let _ = clone 3 5.5;;
                  ^^^
Error: This expression has type float but an expression was expected of type
         int
